@@ -17,7 +17,15 @@ import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static java.lang.System.out;
+import static java.lang.System.*;
+
+class MaxRetryException extends Exception {
+    public MaxRetryException(String message) {
+        super(message);
+    }
+}
+
+class LeaverException extends Exception {}
 
 public class ContreeLocalPlayerEventHandler extends ThreadLocalContreePlayerEventHandler {
 
@@ -31,32 +39,44 @@ public class ContreeLocalPlayerEventHandler extends ThreadLocalContreePlayerEven
     public static final String ANSI_CYAN = "\u001B[36m";
     public static final String ANSI_WHITE = "\u001B[37m";
 
-    private final static Map<String, ClassicalCard> cardByLabel;
+    private static final String LEAVE_MSG = "leave";
 
-    private final static Map<String, ContreeBidValue> bidValueByLabel;
+    private static final Map<String, ClassicalCard> CARD_BY_LABEL;
 
-    private final static Map<String, CardSuit> cardSuitByLabel;
+    private static final Map<String, ContreeBidValue> BID_VALUE_BY_LABEL;
+
+    private static final Map<String, CardSuit> CARD_SUIT_BY_LABEL;
+
+    private static final String ALL_BID_VALUES_AS_STRING = streamToJoinedStr(
+            Arrays.stream(ContreeBidValue.values()).sorted()
+    );
+
+    private static final String CARD_SUIT_VALUES_AS_STRING =
+            streamToJoinedStr(
+                    Arrays.stream(CardSuit.values())
+                            .filter(Predicate.not(cs -> cs == CardSuit.NONE))
+                            .sorted()
+            );
 
     static {
-        cardByLabel =
+        CARD_BY_LABEL =
                 CardSet.GAME_32.getGameCards().stream().collect(Collectors.toMap(
                         ClassicalCard::toString,
                         c -> c
                 ));
 
-        bidValueByLabel = Arrays.stream(ContreeBidValue.values()).collect(Collectors.toMap(
+        BID_VALUE_BY_LABEL = Arrays.stream(ContreeBidValue.values()).collect(Collectors.toMap(
                 ContreeBidValue::toString,
                 bv -> bv
         ));
 
-        cardSuitByLabel =  ContreeBid.allowedCardSuitsForValuedBids().stream()
+        CARD_SUIT_BY_LABEL =  ContreeBid.allowedCardSuitsForValuedBids().stream()
                 .collect(
                     Collectors.toMap(
                         CardSuit::toString,
                         cs -> cs
                     )
                 );
-
 
     }
 
@@ -85,154 +105,190 @@ public class ContreeLocalPlayerEventHandler extends ThreadLocalContreePlayerEven
 
     @Override
     void managePlayMessage(PlayerMessage playMessage) {
-        boolean leaver = false;
-        boolean cardPlayed = false;
-        int nbTries = 0;
 
-        final String allowedCards = collectionToJoinedStr(
-                ClassicalCard.sort(playMessage.allowedCards())
-        );
+        out.printf("Your turn to play, %s.%n", getName());
+        out.printf("Here is your hand : %s%n", playerHandAsSortedJoinedStr());
 
-        playLoop:
-        while (!cardPlayed && nbTries < 3) {
+        ClassicalCard playedCard;
+        if (playMessage.onlyOneAllowedCard()) {
+            playedCard = playMessage.allowedCards().iterator().next();
+            out.printf("Only one allowed card: %s. This card is played automatically. Please press enter.%n", playedCard);
+            scanner.nextLine();
+            getPlayer().playCard(playedCard);
+        }
+        else {
+
             try {
-                out.printf("Your turn to play, %s.%n", getName());
-                out.printf("Here is your hand : %s%n", playerHandAsSortedJoinedStr());
-
-                ClassicalCard playedCard = null;
-                if (playMessage.allowedCards().size() == 1) {
-                    playedCard = playMessage.allowedCards().iterator().next();
-                    out.printf("Only one allowed card: %s. This card is played automatically. Please press enter.%n", playedCard);
-                    scanner.nextLine();
-                }
-                while (playedCard == null) {
-                    out.printf("Select a card among the allowed ones : %s:%n", allowedCards);
-                    String selectedCard = scanner.nextLine();
-
-                    if ("leave".equalsIgnoreCase(selectedCard)) {
-                        getPlayer().leaveGame();
-                        leaver = true;
-                        break playLoop;
-                    }
-
-                    playedCard = cardByLabel.get(selectedCard);
-                    if (playedCard != null && !playMessage.allowedCards().contains(playedCard)) {
-                        nbTries++;
-                        out.printf("%s is not an allowed card. Please play one of these cards : %s", playedCard, allowedCards);
-                        playedCard = null;
-                    }
-                }
+                playedCard = managePlayCardUserInput(playMessage.allowedCards());
                 getPlayer().playCard(playedCard);
-                cardPlayed = true;
+            }
+            catch (MaxRetryException e) {
+                out.printf("%s. Is it a technical issue ? Please create an issue at https://github.com/sebastien-perpignane/cardgame/%n", e.getMessage());
+                System.exit(1);
+            }
+            catch (LeaverException e) {
+                out.println("Leaving the game.");
+                getPlayer().leaveGame();
+                exit(0);
             }
             catch(Exception e) {
-                System.err.printf("Error occurred when playing your card: %s. Please try again.%n", e.getMessage());
-                nbTries++;
+                err.printf("Unexpected error occurred when placing your bid: %s. Please create an issue at https://github.com/sebastien-perpignane/cardgame/%n", e.getMessage());
+                e.printStackTrace(err);
+                exit(1);
             }
+
         }
-        if (!cardPlayed && !leaver) {
-            System.err.println("It looks like you cannot play. Is it a technical issue ? Please create an issue at https://github.com/sebastien-perpignane/cardgame/");
-            System.exit(1);
+
+    }
+
+    private ClassicalCard managePlayCardUserInput(Collection<ClassicalCard> allowedCards) throws MaxRetryException, LeaverException {
+
+        final String allowedCardsAsString = collectionToJoinedStr(
+                ClassicalCard.sort(allowedCards)
+        );
+
+        ClassicalCard playedCard = null;
+
+        int nbTries = 0;
+        while (playedCard == null && nbTries < 3) {
+            out.printf("Select a card among the allowed ones : %s:%n", allowedCardsAsString);
+            String selectedCard = scanner.nextLine();
+
+            if (LEAVE_MSG.equalsIgnoreCase(selectedCard)) {
+                throw new LeaverException();
+            }
+
+            playedCard = CARD_BY_LABEL.get(selectedCard);
+
+            if (notAllowedCard(playedCard, allowedCards)) {
+                out.printf("%s is not an allowed card. Please play one of these cards : %s", playedCard, allowedCardsAsString);
+                playedCard = null;
+            }
+
+            nbTries++;
+
         }
+
+        if (playedCard == null) {
+            throw new MaxRetryException("Maximum number of retries reached when selecting a card to play");
+        }
+
+        return playedCard;
+
+    }
+
+    private boolean notAllowedCard(ClassicalCard playedCard, Collection<ClassicalCard> allowedCards) {
+        return playedCard != null && !allowedCards.contains(playedCard);
     }
 
     @Override
     void manageBidMessage(PlayerMessage bidMessage) {
 
-        boolean leaver = false;
-
-        int nbTries = 0;
-        boolean bidPlaced = false;
-
         final String allowedBiValues = streamToJoinedStr(bidMessage.allowedBidValues().stream().sorted());
-
-        final String allBidValues = streamToJoinedStr(
-                Arrays.stream(ContreeBidValue.values()).sorted()
-        );
-
-        final String cardSuitValues =
-                streamToJoinedStr(
-                        Arrays.stream(CardSuit.values())
-                                .filter(Predicate.not(cs -> cs == CardSuit.NONE))
-                                .sorted()
-                );
 
         out.printf("Your turn to bid, %s.%n", getName());
         out.printf("Here is your hand: %s%n", playerHandAsSortedJoinedStr());
 
-        bidLoop:
-        while (!bidPlaced && nbTries < 3) {
-            try {
-                ContreeBidValue bidValue = null;
-                CardSuit bidSuit = null;
+        try {
+            ContreeBidValue bidValue = manageBidValueUserInput(allowedBiValues);
 
-                while (bidValue == null) {
-                    out.printf("All bid values are: %s%n", allBidValues);
-                    out.printf("Select a bid value. Allowed values are : %s%n : ", allowedBiValues);
-                    String selectedBid = scanner.nextLine();
-                    if ("leave".equalsIgnoreCase(selectedBid)) {
-                        getPlayer().leaveGame();
-                        leaver = true;
-                        break bidLoop;
-                    }
-
-                    bidValue = bidValueByLabel.get(selectedBid);
-
-                }
-
-                if ( !bidValue.isCardSuitRequired() ) {
-                    getPlayer().placeBid(bidValue, null);
-                    return;
-                }
-
-                while (bidSuit == null) {
-                    out.printf("Select a card suit. Allowed values are : %s%n : ", cardSuitValues);
-                    String selectedSuit = scanner.nextLine();
-                    if ("leave".equalsIgnoreCase(selectedSuit)) {
-                        getPlayer().leaveGame();
-                        leaver = true;
-                        break bidLoop;
-                    }
-                    bidSuit = cardSuitByLabel.get(selectedSuit);
-                }
-
-                getPlayer().placeBid(bidValue, bidSuit);
-                bidPlaced = true;
+            CardSuit bidSuit = null;
+            if (bidValue.isCardSuitRequired()) {
+                bidSuit = manageBidSuitUserInput();
             }
-            catch (Exception e) {
-                System.err.printf("Error occurred when placing your bid: %s. Please try again.%n", e.getMessage());
-                e.printStackTrace(System.err);
-            }
-            finally {
-                nbTries++;
-            }
+
+            getPlayer().placeBid(bidValue, bidSuit);
         }
-
-        if (!bidPlaced && !leaver) {
-            System.err.println("It looks like you cannot bid. Is it a technical issue ? Please create an issue at https://github.com/sebastien-perpignane/cardgame/");
+        catch(LeaverException le) {
+            out.println("Leaving the game.");
+            getPlayer().leaveGame();
+            exit(0);
+        }
+        catch(MaxRetryException mre) {
+            out.printf("%s. Is it a technical issue ? Please create an issue at https://github.com/sebastien-perpignane/cardgame/%n", mre.getMessage());
+            System.exit(1);
+        }
+        catch (Exception e) {
+            err.printf("Unexpected error occurred when placing your bid: %s. Please create an issue at https://github.com/sebastien-perpignane/cardgame/%n", e.getMessage());
+            e.printStackTrace(err);
             System.exit(1);
         }
 
     }
+
+    private ContreeBidValue manageBidValueUserInput(String allowedBiValues) throws MaxRetryException, LeaverException  {
+
+        ContreeBidValue bidValue = null;
+
+        int nbTries = 0;
+        while (bidValue == null && nbTries < 3) {
+            out.printf("All bid values are: %s%n", ALL_BID_VALUES_AS_STRING);
+            out.printf("Select a bid value. Allowed values are : %s%n : ", allowedBiValues);
+            String selectedBid = scanner.nextLine();
+            if (LEAVE_MSG.equalsIgnoreCase(selectedBid)) {
+                throw new LeaverException();
+            }
+
+            bidValue = BID_VALUE_BY_LABEL.get(selectedBid);
+            nbTries++;
+        }
+
+        if (bidValue == null) {
+            throw new MaxRetryException("Maximum number of retries reached when selecting bid value");
+        }
+
+        return bidValue;
+
+    }
+
+    private CardSuit manageBidSuitUserInput() throws MaxRetryException, LeaverException {
+        CardSuit bidSuit = null;
+        int nbTries = 0;
+        while (bidSuit == null && nbTries < 3) {
+            out.printf("Select a card suit. Allowed values are : %s%n : ", CARD_SUIT_VALUES_AS_STRING);
+            String selectedSuit = scanner.nextLine();
+            if (LEAVE_MSG.equalsIgnoreCase(selectedSuit)) {
+                throw new LeaverException();
+            }
+            bidSuit = CARD_SUIT_BY_LABEL.get(selectedSuit);
+            nbTries++;
+        }
+
+        if (bidSuit == null) {
+            throw new MaxRetryException("Maximum number of retries reached when selecting bid suit");
+        }
+
+        return bidSuit;
+
+    }
+
     private String playerHandAsSortedJoinedStr() {
         return collectionToJoinedStr(
                 ClassicalCard.sort( getPlayer().getHand() ).stream().map(c -> {
-                    if (c.getRank() == CardRank.JACK || c.getRank() == CardRank.NINE) {
+                    if (cardIsJackOrNine(c)) {
                         return String.format("%s%s%s", ANSI_RED, c, ANSI_RESET);
                     }
-                    else if (c.getRank() == CardRank.ACE) {
+                    else if (cardIsAce(c)) {
                         return String.format("%s%s%s", ANSI_PURPLE, c, ANSI_RESET);
                     }
                     else {
                         return c.toString();
                     }
-                }).collect(Collectors.toList())
+                }).toList()
         );
+    }
+
+    private boolean cardIsJackOrNine(ClassicalCard c) {
+        return c.getRank() == CardRank.JACK || c.getRank() == CardRank.NINE;
+    }
+
+    private boolean cardIsAce(ClassicalCard c) {
+        return c.getRank() == CardRank.ACE;
     }
 
     @Override
     public void onStatusUpdate(ContreePlayerStatus oldStatus, ContreePlayerStatus newStatus) {
-        System.out.printf("You're now %s%n", newStatus);
+        out.printf("You're now %s%n", newStatus);
     }
 
     @Override
@@ -240,11 +296,11 @@ public class ContreeLocalPlayerEventHandler extends ThreadLocalContreePlayerEven
         return String.format("* %s *", getName());
     }
 
-    private String collectionToJoinedStr(Collection<?> collection) {
+    private static String collectionToJoinedStr(Collection<?> collection) {
         return streamToJoinedStr(collection.stream());
     }
 
-    private String streamToJoinedStr(Stream<?> stream) {
+    private static String streamToJoinedStr(Stream<?> stream) {
         return stream.map(Object::toString).collect(Collectors.joining(", "));
     }
 
